# rust-api

./: Cargo.toml  api.http  docker-compose.yml  dockerfile  readme.md  template.env
load_test/: load_test.js
migrations/: script.sql
src/: lib.rs  main.rs
src/adapters/db/: mod.rs  user_repo_sqlx.rs
src/adapters/http/: dto.rs  mod.rs  user_handlers.rs
src/domain/: errors.rs  mod.rs  user.rs
src/infrastructure/: db.rs
src/usecase/: mod.rs  ports.rs  user_service.rs
