[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }

dotenvy = "0.15"
tower-http = { version = "0.6.8", features = ["cors", "trace", "request-id"] }

async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }